--- a/main.tex
+++ b/main.tex
@@ -110,7 +110,7 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Group Anomaly Detection based on \\ Spectral Graph Wavelets}
+\title{Absenteeism Detection in Social Media}
 
 %``The Lull before the Storm": Event Detection from Group Anomaly
 
@@ -152,8 +152,14 @@
 % in the abstract
 \begin{abstract}
 Event detection in online social media has primarily focused on identifying
-abnormal spikes, or bursts, in activity. However, disruptive events such as socio-economic disasters, civil unrest, and even power outages, often result in abnormal troughs involving group absenteeism of activity. We present the first study, to our knowledge, that models absenteeism and uses detected absenteeism as a basis for event detection in location based social networks (LBSN) such as Twitter. The new framework addresses the challenges of (i) early detection of absenteeism, (ii) identifying the point of origin, and (iii) identifying groups or communities underlying the absenteeism. Our approach uses the formalism of graph wavelets to represent the spatiotemporal structure and user activity in a LSBN. This formalism facilitates multiscale analysis, enabling us to detect anomalous behavior at different graph resolutions, which in turn allows the identification of event location and anomalous groups within the network. We introduce a systematic group anomaly detection method that utilizes graph wavelets to simultaneously detect absenteeism and burst groups.
-The effectiveness of our approach is then verified using Twitter activity related to protests events in Latin America.
+abnormal spikes, or bursts, in activity. However, disruptive events such as socio-economic disasters, civil unrest, and even power outages, often involve abnormal troughs or lack of activity,
+leading to absenteeism.
+We present the first study, to our knowledge, that models absenteeism and uses detected absenteeism 
+instances as a basis for event detection in location-based social networks (LBSN) such as Twitter. The proposed framework addresses the challenges of (i) early detection of absenteeism, (ii) identifying the locus of the absenteeism, and (iii) identifying groups or communities underlying the absenteeism. Our approach uses the formalism of graph wavelets to represent the spatiotemporal structure of 
+user activity in a LSBN. This formalism facilitates multiscale analysis, enabling us to detect anomalous behavior at different graph resolutions, which in turn allows the identification of event locations 
+and underlying groups. 
+The effectiveness of our approach is evaluated using Twitter activity related to civil unrest 
+events in Latin America.
 \end{abstract}
 
 % no keywords
