--- a/main.tex
+++ b/main.tex
@@ -207,8 +207,7 @@ interest?
 noisy signals for successful event detection.
 \end{itemize}
 
-A graph wavelet approach offers several outstanding advantages to study
-studying the above questions, including scalability, localization, low computational complexity, and
+A graph wavelet approach offers several outstanding advantages to study the above questions, including scalability, localization, low computational complexity, and
 compactness in defining groups. In this formalism, the data objects are embedded in a general graph as vertices. By employing wavelet transforms on the graph, we can construct a wavelet function with a graph structure. We propose the use of a graph anomaly index that depends on the graph structure in conjunction with an absenteeism score vector in order to define whether a graph is abnormal. When a graph is deemed to be exhibiting abnormal behavior, we can calculate its wavelet coefficient to identify the central node and its coverage area. This approach will enable us to select abnormal groups at different scales. Such group anomaly detection methods are varied and proven to be effective in detecting events such as protest marches and natural disasters.
 
 %As for another abnormal scenarios such as natural disaster, we propose a two-pass group anomaly detection method that first detects absenteeism, and then checks if there is a subsequent burst in activity within a specific time period. By comparing correlations between the wavelet coefficients of both of these groups, we are able to capture a possible real world event.
@@ -231,7 +230,7 @@ Section~\ref{sec:experiment} extensive experiments testing our new approach's ef
 \label{sec:related}
 \paragraph{Group Anomaly Detection}
 Anomaly detection in graphs has been well studied using outlier detection methods~\cite{akoglu2009anomaly}. When considering group concepts, two directions have been explored~\cite{akoglu2015graph}, namely anomalies in unlabeled/plain graphs~\cite{noble2003graph} and those in
-attributed graphs. In plain graph anomaly detection, since the only information provided is its structure, features such as distances and communities~\cite{sun2005neighborhood} have been employed to define graph anomalies. In one interesting study~\cite{henderson2010metric}, additional metrics such as vertices, edges, degree, weight, and connected components are incorporated into the detection framework. In attributed graphs, features regarding node behaviors make it possible to create a richer graphical representation, which is usually connected with one or more real-world applications. Other studies, for example~\cite{yu2014glad} define groups based on the term of the role, and model normal groups that follow the same pattern with respect to their role mixture rates. Alternatively, some researchers working on group anomaly detection have built generative models of group anomalies~\cite{xiong2011hierarchical} where the goal is to automatically infer the groups and thus detect group anomalies in a social network. Typically these mixed models suffer from high computational complexity, however, due to the size of the data and are as a result heavily parameterized. In this study, we consider both the graph structure and node features in our proposed graph wavelet based approach for group anomaly detection, as this guarantees that the detected group is automatically compact, with linear computation complexity and scalability.
+attributed graphs. In plain graph anomaly detection, since the only information provided is its structure, features such as distances and communities~\cite{sun2005neighborhood} have been employed to define graph anomalies. In one interesting study~\cite{henderson2010metric}, additional metrics such as vertices, edges, degree, weight, and connected components are incorporated into the detection framework. In attributed graphs, features regarding node behaviors make it possible to create a richer graphical representation, which is usually connected with one or more real-world applications. Other studies, for example~\cite{yu2014glad} define groups based on the term of the role, and model normal groups that follow the same pattern with respect to their role mixture rates. Alternatively, some researchers working on group anomaly detection have built generative models of group anomalies~\cite{xiong2011hierarchical} where the goal is to automatically infer the groups and thus detect group anomalies in a social network. Typically these mixed models suffer from high computational complexity, however, due to the size of the data and are as a result heavily parameterized. In this study, we consider both the graph structure and node features in our proposed graph wavelet based approach for group anomaly detection, as this guarantees that the detected group is automatically compact, with polynomial computation complexity and scalability.
 
 \paragraph{Event Detection}
 Event detection based on LSBNs is a research area that has attracted significant attention in recent years. Traditional approaches focus on capturing the spatiotemporal burstiness of keywords~\cite{lappas2009burstiness,lappas2012spatiotemporal}; Kalman filtering to track the geographical trajectories of hot spots of tweets related to earthquakes~\cite{sakaki2010earthquake}; detecting topics of interest that are coherent within specific geographic regions~\cite{eisenstein2010latent,hong2012discovering,yin2011geographical}; applying clustering-based approaches to search for emerging clusters of documents or terms using predefined similarity metrics that consider factors such as term co-occurrences and social interactions~\cite{aggarwal2012event,sayyadi2009event,watanabe2011jasmine,weng2011event}; and using the notion of compactness of a graph~\cite{rozenshtein2014event} to detect events. Several statistical methods have also been developed, based on Kulldroff's spatial scan statistic~\cite{kulldorff1997spatial}, to detect spatial outliers~\cite{chen2008detecting} and these have been applied to a wide variety of domains including transportation networks, civil unrest forecasting~\cite{zhao2014unsupervised}, and heterogeneous social media graphs~\cite{chen2014non}. The approach we have chosen to address the event detection problem is conceptually different from all the above mentioned studies as it is based on the use of a graph-theoretic framework to detect group anomalies and correlate these to predict future events. Although group absence behavior has been widely studied in the area of organizational behavioral studies~\cite{gaudine2001effects,seamonds1982stress}, it remains largely unexplored in the area of social network analysis. 
